@@ -5,6 +5,9 @@ BF: Worker: Correction of the unwanted SocketException on stop and restart
     The behavior is correct, only the error output is wrong.
 BF: HTML: Cleanup of the obsolete type attribute in the style tag
 BF: Project: Update of slogan (Experimental Server Engine)
+BF: (Class)Loader: Optimization and corrections
+    Optimization of error handling.
+    Important errors such as UnsupportedClassVersionError are no longer swallowed.
 CR: XAPI: Change method String Module.explain() to String Module.expose()
 CR: SAPI: Change method String Server.explain() to String Server.expose()
 CR: Documentation: Reduction to English
